--- a/hw32/package.json
+++ b/hw32/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "date-fns": "^1.30.1",
-    "nodemon": "git+https://github.com/remy/nodemon.git",
     "ramda": "^0.27.0"
+  },
+  "devDependencies": {
+    "nodemon": "git+https://github.com/remy/nodemon.git"
   }
 }
